--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,27 +1,28 @@
-# Stage 1: Build Client
+# Stage 1: Build Frontend
 FROM node:22 AS client-build
-WORKDIR /build/client
+WORKDIR /app/client
 COPY client/package*.json ./
 RUN npm install
 COPY client/ ./
 RUN npm run build
 
 # Stage 2: Server Runtime
-FROM node:22
-
+FROM node:22-slim
 WORKDIR /app
 
-# Copy root package.json (defines workspace or common scripts if any, though server strictly needs its own dependencies usually managed in root in this mono-repo setup)
+# Install production dependencies for server
 COPY package*.json ./
 RUN npm install --omit=dev
 
+# Copy server code
 COPY server/ ./server/
 COPY init-db.sql ./
 
-# Copy built frontend assets from Stage 1
+# Copy built frontend from Stage 1
 # server/index.js expects ../client/dist, so we place it at /app/client/dist
-COPY --from=client-build /build/client/dist ./client/dist
+COPY --from=client-build /app/client/dist ./client/dist
 
 EXPOSE 3000
+ENV NODE_ENV=production
 
-CMD ["node", "server/index.js"]
+CMD [" node,
